--- a/media-device-backend/service.yaml
+++ b/media-device-backend/service.yaml
@@ -17,5 +17,12 @@ spec:
       containers:
       - name: backend
         image: backend-app:latest
+        resources:
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
         ports:
         - containerPort: 3000
