--- a/media-device-frontend/media-device-manager/deployment.yaml
+++ b/media-device-frontend/media-device-manager/deployment.yaml
@@ -19,5 +19,12 @@ spec:
         image: <HARBOR_DOMAIN>/project-name/frontend-app:latest
         ports:
         - containerPort: 3001
+        resources:
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
       imagePullSecrets:
       - name: harbor-registry-credentials
