--- a/media-device-frontend/media-device-manager/deployment.yaml
+++ b/media-device-frontend/media-device-manager/deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: frontend-deployment
   labels:
     app: frontend
+  annotations:
+    linkerd.io/inject: enabled
 spec:
   replicas: 2
   selector:
